<resources>
    <string name="app_name">Cuide-Se</string>
    <string name="cuide_se">Cuide-Se</string>
    <string name="entrar_com_o_e_mail">Entrar com o e-mail</string>
    <string name="entrar_com_o_e_mail1">Entrar com o e-mail</string>
    <string name="escolha_um_das_redes_sociais">Escolha um das redes sociais</string>
    <string name="escolha_uma_das_redes_sociais">escolha uma das redes sociais</string>
    <string name="continue_com_o_google">Continue com o Google</string>
    <string name="continue_com_o_google1">Continue com o Google</string>
    <string name="continue_com_o_google2">Continue com o Google</string>
    <string name="continue_com_o_google3">Continue com o Google</string>
    <string name="continue_com_facebook">Continue com Facebook</string>
    <string name="continue_com_google">Continue com Google</string>
    <string name="continue_com_apple">Continue com Apple</string>
    <string name="title_activity_categorias">Categorias</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_tela_categorias">TelaCategorias</string>
    <string name="minha_conta">Minha Conta</string>
    <string name="categorias">Categorias</string>
    <string name="sair">Sair</string>
    <string name="open">Open Navigation Drawer</string>
    <string name="close">Close Navigation Drawer</string>


</resources>